Removed --XX: permgen size ( running java8 )
git-svn-id: https://svn.dbc.dk/repos/openagency-ws-client/trunk@111957 b87a6194-a221-0410-ad6f-3b8ec35bba13